refactor: Remove unused imports and clean up code across multiple files